# Life

./: .gitmodules  CMakeLists.txt
res/: CMakeLists.txt
res/Shaders/: board.frag  board.vert  outline.frag  outline.vert
src/app/: Application.cpp  CMakeLists.txt  pch.hpp
src/app/Window/: Event.hpp  Window.cpp  Window.hpp
src/lwvl/include/lwvl/: lwvl.hpp
src/lwvl/src/: Framebuffer.cpp  Shader.cpp  VertexArray.cpp
